🐛 FIX: Adding download button and fixing text align

--- a/src/pages/episodes/styles.module.scss
+++ b/src/pages/episodes/styles.module.scss
@@ -56,6 +56,7 @@
     border-bottom: 1px solid var(--gray-100);
 
     h1 {
+      text-align: justify;
       align-self: center;
       margin-top: 2rem;
       margin-bottom: 1.5rem;
@@ -70,26 +71,38 @@
         font-size: 0.875rem;
       }
 
-      div span {
-        /* Pega todos exceto o primeiro */
-        & + span {
-          margin-left: 1rem;
-          padding-left: 1rem;
-          position: relative;
-        
-          &::before {
-            width: 4px;
-            height: 4px;
-            
-            position: absolute;
-            left: 0;
-            top: 50%;
-            transform: translate(-50%, -50%);
-  
-            content: "";
-  
-            border-radius: 50%;
-            background-color: #DDD;    
+      div {
+        display: flex;
+
+        a {
+          margin-left: 0.5rem;
+
+          font-size: 1.3rem;
+          color: var(--purple-500);
+          text-decoration: none;
+        }
+
+        span {
+          /* Pega todos exceto o primeiro */
+          & + span {
+            margin-left: 1rem;
+            padding-left: 1rem;
+            position: relative;
+          
+            &::before {
+              width: 4px;
+              height: 4px;
+              
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translate(-50%, -50%);
+    
+              content: "";
+    
+              border-radius: 50%;
+              background-color: #DDD;    
+            }
           }
         }
       }
@@ -97,13 +110,14 @@
   }
 
   .description {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
 
     line-height: 1.675rem;
     color: var(--gray-800);
 
     p {
       margin: 1.5rem 0;
+      text-align: justify;
     }
   }
 }
